LDADD = ../libpa.a
noinst_PROGRAMS = rmdirtree_t mysqlpp_test iconv_t util_t
bin_PROGRAMS = xpathGet shadow_t
bin_SCRIPTS = select.awk

shadow_t_SOURCES = shadow_t.cpp
mysqlpp_test_SOURCES = mysqlpp_test.cpp
rmdirtree_t_SOURCES = rmdirtree_t.cpp
xpathGet_SOURCES = xpathGet.cpp
util_t_SOURCES = util_t.cpp
iconv_t_SOURCES = iconv_t.cpp
